# synology-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: credentials.md
docs/specs/: architecture.md  config-schema-spec.md  filestation-module-spec.md  project-scaffolding-spec.md
examples/: config-docker.yaml  config-minimal.yaml  config-power-user.yaml
src/synology_mcp/: __init__.py  __main__.py  cli.py  server.py
src/synology_mcp/cli/: __init__.py  check.py  logging_.py  main.py  setup.py  version.py
src/synology_mcp/core/: __init__.py  auth.py  client.py  config.py  errors.py  formatting.py  state.py
src/synology_mcp/instructions/: server.md
src/synology_mcp/modules/: __init__.py
src/synology_mcp/modules/filestation/: __init__.py  helpers.py  listing.py  metadata.py  operations.py  search.py
tests/: conftest.py  integration_config.yaml.example  test_e2e.py  test_integration.py
tests/core/: test_auth.py  test_cli.py  test_client.py  test_config.py  test_errors.py  test_formatting.py  test_server.py  test_state.py
tests/modules/: test_module_system.py
tests/modules/filestation/: test_helpers.py  test_listing.py  test_metadata.py  test_operations.py  test_search.py
